@@ -7,10 +7,8 @@ import com.example.Ingress_lab.model.response.DestinationResponse;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.example.Ingress_lab.mapper.TourMapper.toTourResponse;
-import static com.example.Ingress_lab.model.enums.Status.ACTIVE;
+import static com.example.Ingress_lab.model.enums.EntityStatus.ACTIVE;
 
 public enum DestinationMapper {
     DESTINATION_MAPPER;
@@ -20,7 +18,7 @@ public enum DestinationMapper {
                 .location(request.getLocation())
                 .description(request.getDescription())
                 .visitDate(request.getVisitDate())
-                .status(ACTIVE)
+                .destinationStatus(ACTIVE)
                 .build();
     }
 
@@ -30,8 +28,7 @@ public enum DestinationMapper {
                 .location(entity.getLocation())
                 .description(entity.getDescription())
                 .visitDate(entity.getVisitDate())
-                .status(entity.getStatus())
-//                .tour(toTourResponse(entity.getTour()))
+                .destinationEntityStatus(entity.getDestinationStatus())
                 .createdAt(entity.getCreatedAt())
                 .updatedAt(entity.getUpdatedAt())
                 .build();
@@ -41,7 +38,7 @@ public enum DestinationMapper {
         return entities
                 .stream()
                 .map(DestinationMapper::toDestinationResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static void updateDestinationEntity(DestinationEntity entity, DestinationRequest request) {
@@ -51,47 +48,5 @@ public enum DestinationMapper {
         entity.setUpdatedAt(LocalDateTime.now());
     }
 
-//    public static CardEntity toCardEntity(CardRequest request) {
-//        return CardEntity.builder()
-//                .username(request.getUsername())
-//                .amount(request.getAmount())
-//                .status(Status.ACTIVE)
-//                .build();
-//    }
-//
-//    public static CardResponse toCardResponse(CardEntity entity) {
-//        return CardResponse.builder()
-//                .id(entity.getId())
-//                .username(entity.getUsername())
-//                .cardNumber(entity.getCardNumber())
-//                .amount(entity.getAmount())
-//                .status(entity.getStatus())
-//                .createdAt(entity.getCreatedAt())
-//                .updatedAt(entity.getUpdatedAt())
-//                .build();
-//    }
-//
-//    public static List<CardResponse> toCardResponses(List<CardEntity> entities) {
-//        return entities
-//                .stream()
-//                .map(Mapper::toCardResponse)
-//                .toList();
-//    }
-//
-//    public static void updateCardEntity(CardEntity entity, CardRequest request) {
-//        entity.setUsername(request.getUsername());
-//        entity.setAmount(request.getAmount());
-//        entity.setUpdatedAt(LocalDateTime.now());
-//    }
-//
-//    public static PageableResponse mapToPageableResponse(Page<CardEntity> entities) {
-//        return PageableResponse
-//                .builder()
-//                .content(Collections.singletonList(entities.map(Mapper::toCardResponse).stream().toList()))
-//                .totalElements(entities.getTotalElements())
-//                .hasNextPage(entities.hasNext())
-//                .lastPageNumber(entities.getTotalPages())
-//                .build();
-//    }
 }
 
